--- a/.github/workflows/prod_qium.yml
+++ b/.github/workflows/prod_qium.yml
@@ -21,11 +21,10 @@ jobs:
       with:
         node-version: '14.x'
 
-    - name: yarn install, build, and test
+    - name: yarn install, build
       run: |
         yarn install
         yarn build --if-present
-        yarn test --if-present
 
     - name: Upload artifact for deployment job
       uses: actions/upload-artifact@v2
